# SimpleOpenGL_GLFW

./: CMakeLists.txt  README.md  license.txt  readme.txt
sources/: CMakeLists.txt  Interface.cpp  Interface.h  main.cpp
